force-app/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <description>A time-bound discount applied to a tenancy or specific contract. The discount is pro-rated by calendar day when an invoice period partially overlaps the discount date range.</description>
    <label>Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>