force-app/main/default/objects/Discount__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional. If set, the discount applies only to invoices generated from this specific contract. If blank, the discount applies to any active contract under the tenancy.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>