force-app/main/default/objects/Discount__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal notes about why this discount was granted (e.g. tenant out of station, goodwill reduction, partial period concession).</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>