force-app/main/default/objects/Discount__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <description>How the discount is expressed. Percentage: a % of the daily rent rate. Fixed Amount: a fixed dollar amount per full frequency period, pro-rated over overlapping days.</description>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>