force-app/main/default/objects/Discount__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <description>The discount magnitude. For Percentage type: enter the percentage as a number (e.g. 10 for 10%). For Fixed Amount type: enter the dollar amount off per full frequency period (e.g. 50 for $50 off per week/fortnight/month). The batch pro-rates this over the actual overlapping days.</description>
    <label>Discount Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>