force-app/main/default/objects/Discount__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Last calendar day the discount is active (inclusive). Leave blank for an open-ended discount with no expiry.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>