force-app/main/default/objects/Discount__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First calendar day the discount is active. Invoice periods overlapping on or after this date are eligible for pro-rated reduction.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>