force-app/main/default/objects/Discount__c/fields/Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Tenancy__c</fullName>
    <description>The tenancy this discount applies to. Always required — links the discount to a specific tenant.</description>
    <label>Tenancy</label>
    <referenceTo>Tenancy__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>